Fix position of actions on mobile

--- a/paillette/static/mobile.css
+++ b/paillette/static/mobile.css
@@ -50,7 +50,7 @@
   }
 
   .actions {
-    bottom: 3rem;
+    bottom: 4.5rem;
     flex-direction: column;
     right: 0.5rem;
     top: auto;
